####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = fcp 

EXTRA_DIST = fcp.kdevprj AUTHORS COPYING ChangeLog INSTALL README fcp.lsm fcpd.conf.sample fcp-description-19.txt fcp-examples-19.txt fcp-spec-19-abnf.txt

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign
