####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = fcpd
fcpd_SOURCES = helper.c validity.c configure.c api.c interpret.c parse.c debug.c  main.c network.c
fcpd_LDADD   = ./libipfwc/libipfwc.a ./libiptc/libiptc.a


EXTRA_DIST = main.c main.h api.h protocol-specs debug.h debug.c parse.c parse.h interpret.c interpret.h api.c configure.h configure.c validity.h validity.c helper.c helper.h network.c network.h ./libipfwc/ipfwc_kernel_headers.h ./libipfwc/libipfwc.h ./libipfwc/libipfwc.a ./libiptc/libiptc.h ./libiptc/ipt_kernel_headers.h ./libiptc/libiptc.a

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = fcpd
